terraform_module/modules/vpc/gateway.tf
# Internet GW
resource "aws_internet_gateway" "default" {
  vpc_id = "${aws_vpc.default.id}"

  tags = {
    Name = "anand-gw"
  }
}
