terraform_module/modules/vpc/vpc.tf
resource "aws_vpc" "default" {
  cidr_block           = "${var.vpc_cidr}"
  enable_dns_hostnames = true
  tags = {
    Name = "anand-vpc"
  }
}
output "vpc_id22" {
  value = "${aws_vpc.default.id}"
}
